# whothis

./: .gitignore  Makefile  README.md  pyproject.toml  setup.sh
ansible/: ansible.cfg  default.config.yml  main.yml  playbook.yml
dotfiles/claude/.claude/: settings.json
dotfiles/config/.config/gh/: config.yml
dotfiles/git/: .gitconfig
dotfiles/ssh/.ssh/: config
dotfiles/vim/: .vimrc
dotfiles/vim/.vim/: vimrc
dotfiles/vim/cache/: .gitignore
dotfiles/vim/undodir/: .gitignore
dotfiles/zsh/: .zprofile  .zshenv  .zshrc
dotfiles/zsh/.zsh/: .zprofile  .zshrc
dotfiles/zsh/.zsh/cache/: .gitignore
