[project]
name = "whothis"
dynamic = ["version"]
description = "System bootstrap configuration"
requires-python = ">=3.11"
dependencies = [
    "ansible",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# pull project version from git tags
[tool.hatch.version]
source = "vcs"
